--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm-run-all --parallel watch serve",
-    "watch": "sass --watch css/sass:css",
+    "start": "npm-run-all --parallel watch serve postcss",
+    "watch": "sass --watch css/sass/custom.scss:css/build/custom.css",
     "serve": "live-server",
-    "build": "sass css/sass:css"
+    "postcss": "postcss css/build/custom.css --use autoprefixer cssnano -d css/ --watch",
+    "build": "sass css/sass/custom.scss:css/build/custom.css && npm run postcss"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,11 @@
   },
   "homepage": "https://github.com/64bitpandas/bencuan.me#readme",
   "devDependencies": {
+    "autoprefixer": "^9.8.4",
+    "cssnano": "^4.1.10",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
     "sass": "^1.26.10"
   }
 }
