Start navbar, refactor js

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm-run-all --parallel watch serve postcss",
     "watch": "sass --watch css/sass/:css/build",
     "serve": "live-server",
-    "postcss": "postcss css/build/custom.css --use autoprefixer cssnano -d css/ --watch",
+    "postcss": "postcss css/build/custom.css --use autoprefixer cssnano -d css/ --watch"
   },
   "repository": {
     "type": "git",
