--- a/src/data/featured-projects.json
+++ b/src/data/featured-projects.json
@@ -14,7 +14,7 @@
         "tag": "Game",
         "color": "github",
         "tagColor": "itch",
-        "image": "bullet-sanctum.png",
+        "image": "bullet-sanctum.jpg",
         "github": "https://github.com/trisagion-games/bullet-sanctum",
         "link": "https://64bitpandas.itch.io/bullet-sanctum",
         "description": "Inspired by titles such as DOOM and Bayonetta, Bullet Sanctum is a game about banishing demons with unfettered virtue. <br><br> Play as The Crusader as you wield multiple guns with unique strengths and weaknesses, serving different purposes for both combat and level navigation. <br><br> Bullet Sanctum was developed in 31 days in Unity for Metroidvania Month 8."
