--- a/src/data/featured-projects.json
+++ b/src/data/featured-projects.json
@@ -7,7 +7,7 @@
         "image": "launchhacks.jpg",
         "github": "https://github.com/BananiumLabs/LaunchHacksSite",
         "link": "https://launchhacks.bananiumlabs.com",
-        "description": "In 2019, I organized a 24 long hackathon for 100 high school students in Fremont, CA. <br><br> As the lead organizer, I had the opportunity to work on many different aspects such as web development, contacting sponsors, and running workshops. <br><br> Organizing a hackathon for the first time took a lot of work, but I'm glad we were able to successfully contribute to the vibrant hackathon community!"
+        "description": "In 2019, I organized a 24 hour long hackathon for 100 high school students in Fremont, CA. <br><br> As the lead organizer, I had the opportunity to work on many different aspects such as web development, contacting sponsors, and running workshops. <br><br> Organizing a hackathon for the first time took a lot of work, but I'm glad we were able to successfully contribute to the vibrant hackathon community!"
     },
     {
         "name": "Bullet Sanctum",
