--- a/src/data/featured-projects.json
+++ b/src/data/featured-projects.json
@@ -11,6 +11,14 @@
 
     },
     {
+        "name": "SysAdmin DeCal",
+        "color": "contact-color",
+        "image": "ocf.png",
+        "github": "https://github.com/0xcf/decal-web",
+        "link": "https://decal.ocf.io",
+        "description": "I'm currently a head facilitator for the Linux Systems Administration DeCal, a student-run course managed by the <a class=\"link\" href=\"https://ocf.io\" target=\"_blank\">Open Computing Facility</a> that serves as a crash course for UNIX systems, server engineering, and computer security. <br><br> As a facilitator, I help develop course materials, manage logistics, and give lectures. <br><br> All course materials will be available online to everyone- so even if you're not a Berkeley student, feel free to join in on the fun!"
+    },
+    {
         "name": "LaunchHacks",
         "tag": "Event",
         "color": "gradient2-color",
@@ -19,13 +27,5 @@
         "github": "https://github.com/BananiumLabs/LaunchHacksSite",
         "link": "https://launchhacks.bananiumlabs.com",
         "description": "In 2019, I organized a 24 hour long hackathon for 100 high school students in Fremont, CA. <br><br> As the lead organizer, I had the opportunity to work on many different aspects such as web development, contacting sponsors, and running workshops. <br><br> Organizing a hackathon for the first time took a lot of work, but I'm glad we were able to successfully contribute to the vibrant hackathon community!"
-    },
-    {
-        "name": "Linux SysAdmin DeCal",
-        "color": "contact-color",
-        "image": "ocf.png",
-        "github": "https://github.com/0xcf/decal-web",
-        "link": "https://decal.ocf.io",
-        "description": "I'm currently a head facilitator for the Linux Systems Administration DeCal, a student-run course managed by the <a class=\"link\" href=\"https://ocf.io\" target=\"_blank\">Open Computing Facility</a> that serves as a crash course for UNIX systems, server engineering, and computer security. <br><br> As a facilitator, I help develop course materials, manage logistics, and give lectures. <br><br> All course materials will be available online to everyone- so even if you're not a Berkeley student, feel free to join in on the fun!"
     }
 ]
