--- a/src/data/featured-projects.json
+++ b/src/data/featured-projects.json
@@ -7,7 +7,7 @@
         "image": "trackversal.png",
         "github": "https://github.com/trackversal",
         "link": "https://trackversal.com",
-        "description": "With thousands of bikes, laptops, and other valuables getting stolen or misplaced everyday, many of us have considered getting a GPS tracker to find our items-- only to realize that they cost upwards of $15/month to operate! <br><br> Trackversal is a hybrid Bluetooth-GPS tracking system that aims to make asset tracking affordable and accessible by everyone. As the primary full-stack developer on the team, I ensure that our software stack (React Native, Node.js, MongoDB) is feature-rich and user friendly. <br><br> Trackversal is currently at the pre-seed funding stage and is supported by <a class=\"link\" href=\"https://fellowship.calhacks.io\" target=\"_blank\">CalHacks Fellowship</a>."
+        "description": "With thousands of bikes, laptops, and other valuables getting stolen or misplaced every day, many of us have considered getting a GPS tracker to find our items-- only to realize that they cost upwards of $15/month to operate! <br><br> Trackversal is a hybrid Bluetooth-GPS tracking system that aims to make asset tracking affordable and accessible by everyone. As the primary full-stack developer on the team, I ensure that our software stack (React Native, Node.js, MongoDB) is feature-rich and user friendly. <br><br> Trackversal is currently at the pre-seed funding stage and is supported by <a class=\"link\" href=\"https://fellowship.calhacks.io\" target=\"_blank\">CalHacks Fellowship</a> as well as <a class=\"link\" href=\"https://skydeck.berkeley.edu\" target=\"_blank\">Berkeley SkyDeck</a>."
 
     },
     {
