--- a/src/data/more-projects.json
+++ b/src/data/more-projects.json
@@ -43,23 +43,19 @@
     ]
   },
   {
-    "name": "CarrotCane",
-    "description": "An object detection and tracking tool for the visually impaired",
-    "type": "app",
-    "github": "https://github.com/BananiumLabs/CarrotCane",
-    "link": "https://devpost.com/software/carrotcane",
+    "name": "CS61B Guidebook",
+    "description": "An intuitive guide to data structures (now with 1000+ views!)",
+    "type": "other",
+    "github": "https://github.com/64bitpandas/cs61b-notes",
+    "link": "https://cs61b.bencuan.me/",
     "icons": [
       {
-        "icon": "fas fa-medal",
-        "label": "Hackathon Winner"
+        "icon": "fas fa-chalkboard",
+        "label": "Teaching Materials"
       },
       {
-        "icon": "fab fa-node-js",
-        "label": "Node.js"
-      },
-      {
-        "icon": "icon-arduino",
-        "label": "Arduino"
+        "icon": "fab fa-java",
+        "label": "Java"
       }
     ]
   },
@@ -90,24 +86,6 @@
     ]
   },
   {
-    "name": "Bullet Sanctum",
-    "nameImg": "bulletsanctum_logo.png",
-    "description": "<b><i>It’s time for another crusade.</i></b>",
-    "type": "game",
-    "github": "https://github.com/hexcaliber-dev/BulletSanctum",
-    "link": "https://64bitpandas.itch.io/bullet-sanctum",
-    "icons": [
-      {
-        "icon": "fas fa-gamepad",
-        "label": "Game"
-      },
-      {
-        "icon": "fab fa-unity",
-        "label": "Unity"
-      }
-    ]
-  },
-  {
     "name": "C:\\ONVERGENCE",
     "nameImg": "convergence.png",
     "description": "Play as a rogue sentient AI to uncover the shortcomings of the human race.",
@@ -126,6 +104,68 @@
     ]
   },
   {
+    "name": "Bullet Sanctum",
+    "nameImg": "bulletsanctum_logo.png",
+    "description": "<b><i>It’s time for another crusade.</i></b>",
+    "type": "game",
+    "github": "https://github.com/hexcaliber-dev/BulletSanctum",
+    "link": "https://64bitpandas.itch.io/bullet-sanctum",
+    "icons": [
+      {
+        "icon": "fas fa-gamepad",
+        "label": "Game"
+      },
+      {
+        "icon": "fab fa-unity",
+        "label": "Unity"
+      }
+    ]
+  },
+  {
+    "name": "hexcaliber.dev",
+    "nameImg": "hexcaliber.png",
+    "description": "Website for Hexcaliber Games",
+    "type": "website",
+    "github": "https://github.com/hexcaliber-dev/hexcaliber-web",
+    "link": "https://hexcaliber.dev",
+    "icons": [
+      {
+        "icon": "fab fa-react",
+        "label": "React"
+      },
+      {
+        "icon": "icon-gatsby",
+        "label": "Gatsby"
+      },
+      {
+        "icon": "fab fa-sass",
+        "label": "Sass"
+      }
+    ]
+  },
+  {
+    "name": "CarrotCane",
+    "description": "An object detection and tracking tool for the visually impaired",
+    "type": "app",
+    "github": "https://github.com/BananiumLabs/CarrotCane",
+    "link": "https://devpost.com/software/carrotcane",
+    "icons": [
+      {
+        "icon": "fas fa-medal",
+        "label": "Hackathon Winner"
+      },
+      {
+        "icon": "fab fa-node-js",
+        "label": "Node.js"
+      },
+      {
+        "icon": "icon-arduino",
+        "label": "Arduino"
+      }
+    ]
+  },
+  {
+    "initiallyHidden": true,
     "name": "AegisVR",
     "nameImg": "aegis.png",
     "description": "An interactive VR self defense guide",
@@ -148,6 +188,24 @@
     ]
   },
   {
+    "initiallyHidden": true,
+    "name": "AlphaVantage Bot",
+    "description": "Uses the AlphaVantage API to gather market data for day trading",
+    "type": "other",
+    "github": "https://github.com/BananiumLabs/alpha-vantage-bot/",
+    "icons": [
+      {
+        "icon": "fab fa-js",
+        "label": "JavaScript"
+      },
+      {
+        "icon": "fas fa-chart-line",
+        "label": "Finance"
+      }
+    ]
+  },
+  {
+    "initiallyHidden": true,
     "name": "It's Rude to Point",
     "nameImg": "irtp.png",
     "description": "A silly myriad of minigames played with a single finger",
@@ -166,23 +224,7 @@
     ]
   },
   {
-    "name": "CS61B Guidebook",
-    "description": "An intuitive guide to data structures",
-    "type": "other",
-    "github": "https://github.com/64bitpandas/cs61b-notes",
-    "link": "https://cs61b.bencuan.me/",
-    "icons": [
-      {
-        "icon": "fas fa-chalkboard",
-        "label": "Teaching Materials"
-      },
-      {
-        "icon": "fab fa-java",
-        "label": "Java"
-      }
-    ]
-  },
-  {
+    "initiallyHidden": true,
     "name": "ElectroTab",
     "description": "A highly customizable new tab replacement",
     "type": "app",
