--- a/src/data/featured-projects.json
+++ b/src/data/featured-projects.json
@@ -7,7 +7,7 @@
         "image": "trackversal.png",
         "github": "https://github.com/trackversal",
         "link": "https://trackversal.com",
-        "description": "With thousands of bikes, laptops, and other valuables getting stolen or misplaced every day, many of us have considered getting a GPS tracker to find our items-- only to realize that they cost upwards of $15/month to operate! <br><br> Trackversal is a hybrid Bluetooth-GPS tracking system that aims to make asset tracking affordable and accessible by everyone. As the primary full-stack developer on the team, I ensure that our software stack (React Native, Node.js, MongoDB) is feature-rich and user friendly. <br><br> Trackversal is currently at the pre-seed funding stage and is supported by <a class=\"link\" href=\"https://fellowship.calhacks.io\" target=\"_blank\">CalHacks Fellowship</a> as well as <a class=\"link\" href=\"https://skydeck.berkeley.edu\" target=\"_blank\">Berkeley SkyDeck</a>."
+        "description": "With thousands of bikes, laptops, and other valuables getting stolen or misplaced every day, many of us have considered getting a GPS tracker to find our items-- only to realize that they cost upwards of $15/month to operate! <br><br> Trackversal is a hybrid Bluetooth-GPS tracking system that aims to make asset tracking affordable and accessible by everyone. As the primary full-stack developer on the team, I ensure that our software stack (React Native, Node.js, MongoDB) is feature-rich and user friendly. <br><br> Trackversal is currently at the pre-seed funding stage and is supported by <a class=\"link\" href=\"https://fellowship.calhacks.io\" target=\"_blank\" rel=\"noopener\">CalHacks Fellowship</a> as well as <a class=\"link\" href=\"https://skydeck.berkeley.edu\" target=\"_blank\" rel=\"noopener\">Berkeley SkyDeck</a>."
 
     },
     {
@@ -16,7 +16,7 @@
         "image": "ocf.png",
         "github": "https://github.com/0xcf/decal-web",
         "link": "https://decal.ocf.io",
-        "description": "I'm currently a head facilitator for the Linux Systems Administration DeCal, a student-run course managed by the <a class=\"link\" href=\"https://ocf.io\" target=\"_blank\">Open Computing Facility</a> that serves as a crash course for UNIX systems, server engineering, and computer security. <br><br> As a facilitator, I help develop course materials, manage logistics, and give lectures. <br><br> All course materials will be available online to everyone- so even if you're not a Berkeley student, feel free to join in on the fun!"
+        "description": "I'm currently a head facilitator for the Linux Systems Administration DeCal, a student-run course managed by the <a class=\"link\" href=\"https://ocf.io\" target=\"_blank\" rel=\"noopener\">Open Computing Facility</a> that serves as a crash course for UNIX systems, server engineering, and computer security. <br><br> As a facilitator, I help develop course materials, manage logistics, and give lectures. <br><br> All course materials will be available online to everyone- so even if you're not a Berkeley student, feel free to join in on the fun!"
     },
     {
         "name": "LaunchHacks",
