--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@11ty/eleventy": "^0.12.0",
     "autoprefixer": "^10.2.6",
     "cssnano": "^5.0.6",
-    "live-server": "^1.2.1",
+    "live-server": "^1.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.2",
     "postcss-cli": "^8.3.1",
     "sass": "^1.34.1"
   }
