--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ben Cuan <contact@bencuan.me>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^5.3.2",
@@ -34,7 +35,11 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "getfonts": "if [ -f .env ]; then ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/static/fonts && rm fonts.zip",
+    "archive": "mkdir -p public && cp -r archives/* public/",
+    "prebuild": "npm run getfonts && npm run archive",
+    "predevelop": "npm run getfonts"
   },
   "repository": {
     "type": "git",
