--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "gatsby": "^5.3.2",
-    "gatsby-plugin-fontawesome-css": "^1.2.0",
+    "gatsby": "^5.3.3",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-matomo": "^0.14.0",
@@ -28,7 +27,7 @@
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -37,10 +36,10 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "getfonts": "if [ -f .env ]; then ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/static/fonts && rm fonts.zip",
-    "archive": "mkdir -p public && cp -r archives/* public/",
-    "prebuild": "npm run getfonts && npm run archive",
-    "predevelop": "npm run getfonts"
+    "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/static/fonts && rm fonts.zip",
+    "prebuild": "npm run getfonts",
+    "predevelop": "npm run getfonts",
+    "postbuild": "cp -r archives/ public/"
   },
   "repository": {
     "type": "git",
