--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/static/fonts && rm fonts.zip",
-    "prebuild": "npm run getfonts && cp -r archives static",
-    "predevelop": "npm run getfonts"
+    "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/fonts && rm fonts.zip",
+    "prebuild": "npm run getfonts && cp -r archives static"
   },
   "repository": {
     "type": "git",
