--- a/package.json
+++ b/package.json
@@ -2,41 +2,41 @@
   "name": "bencuan.me",
   "private": true,
   "description": "bencuan's personal website",
-  "version": "2022.0.0",
+  "version": "2024.0.0",
   "author": "Ben Cuan <contact@bencuan.me>",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/netlify": "^4.1.1",
+    "@astrojs/react": "^3.0.9",
+    "@astrojs/ts-plugin": "^1.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "gatsby": "^5.10.0",
-    "gatsby-plugin-image": "^3.3.2",
-    "gatsby-plugin-manifest": "^5.3.1",
-    "gatsby-plugin-matomo": "^0.14.0",
-    "gatsby-plugin-sass": "^6.3.1",
-    "gatsby-plugin-sharp": "^5.8.1",
-    "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-sharp": "^5.3.1",
+    "@types/react": "^18.2.48",
+    "astro": "^4.2.3",
+    "astro-seo": "^0.8.0",
     "hamburgers": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.57.1"
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "prettier": "^2.8.0"
   },
   "keywords": [
-    "gatsby"
+    "astro"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/fonts && unzip -o fonts.zip -d archives/2022/static && rm fonts.zip",
     "fontcustom": "fontcustom compile src/fontcustom --output src/fonts",
     "prebuild": "npm run getfonts && cp -r archives static"
