--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
-    "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d src/fonts && unzip -o fonts.zip -d archives/2022/static && rm fonts.zip",
-    "fontcustom": "fontcustom compile src/fontcustom --output src/fonts",
+    "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d public/fonts && unzip -o fonts.zip -d archives/2022/static && rm fonts.zip",
+    "fontcustom": "fontcustom compile src/fontcustom --output public/fonts",
     "prebuild": "npm run getfonts && cp -r archives static"
   },
   "repository": {
