--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ben Cuan <contact@bencuan.me>",
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/mdx": "^2.1.1",
     "@astrojs/netlify": "^4.1.1",
     "@astrojs/react": "^3.0.9",
     "@astrojs/rss": "^4.0.4",
