--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tooltip": "^5.26.0",
+    "remark-wiki-link": "^2.0.1",
     "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
