--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "@astro/prettier-plugin-astro"],
   "arrowParens": "avoid",
-  "semi": false,
-  "printWidth": 120
+  "semi": true,
+  "printWidth": 120,
+  "singleQuote": true,
+  "importOrder": ["^components/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
