--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^4.2.3",
     "astro-seo": "^0.8.0",
     "hamburgers": "^1.2.1",
+    "prettier-plugin-astro": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-wiki-link": "^2.0.1",
@@ -30,7 +31,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "prettier": "^2.8.0"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "prettier": "^3.2.5"
   },
   "keywords": [
     "astro"
