--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "plugins": ["@trivago/prettier-plugin-sort-imports", "@astro/prettier-plugin-astro"],
-  "arrowParens": "avoid",
-  "semi": true,
-  "printWidth": 120,
-  "singleQuote": true,
-  "importOrder": ["^components/(.*)$", "^[./]"],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+    "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-astro"],
+    "arrowParens": "avoid",
+    "semi": true,
+    "printWidth": 120,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "importOrder": ["^components/(.*)$", "^[./]"],
+    "importOrderSortSpecifiers": true
 }
