--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@icons-pack/react-simple-icons": "^9.3.0",
     "@types/react": "^18.2.48",
     "@types/uuid": "^9.0.8",
     "astro": "^4.2.3",
