--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier-plugin-astro": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tooltip": "^5.26.3",
     "remark-emoji": "^4.0.1",
     "remark-wiki-link": "^2.0.1",
     "sass": "^1.70.0",
