--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "getfonts": "if [ -f .env ]; then . ./.env; fi; wget -O fonts.zip $FONT_URL && unzip -o fonts.zip -d public/fonts && unzip -o fonts.zip -d public/2022/static && rm fonts.zip",
     "fontcustom": "fontcustom compile src/fontcustom --output public/fonts",
-    "prebuild": "yarn run getfonts",
-    "postbuild": ""
+    "prebuild": "yarn run getfonts"
   },
   "repository": {
     "type": "git",
