--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro": "^4.2.3",
     "astro-auto-import": "^0.4.2",
     "astro-seo": "^0.8.0",
+    "bluesky-comments": "^0.9.0",
     "hamburgers": "^1.2.1",
     "prettier-plugin-astro": "^0.13.0",
     "react": "^18.2.0",
