--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request: # TODO: Remove this after v7 is done
+    branches:
+      - main
 
 permissions:
   contents: read
