--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@icons-pack/react-simple-icons": "^9.4.0",
+    "@phosphor-icons/react": "2.1.0",
     "@types/react": "^18.2.48",
     "@types/uuid": "^9.0.8",
     "astro": "^5.15.8",
