--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro-auto-import": "^0.4.2",
     "astro-seo": "^0.8.0",
     "bluesky-comments": "^0.9.0",
+    "colord": "^2.9.3",
     "hamburgers": "^1.2.1",
     "prettier-plugin-astro": "^0.13.0",
     "react": "^18.2.0",
