--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
   "dependencies": {
     "@astrojs/check": "^0.9.5",
     "@astrojs/mdx": "^4.3.10",
-    "@astrojs/netlify": "^6.6.0",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.4.0",
     "@phosphor-icons/react": "2.1.0",
     "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.48",
     "@types/uuid": "^9.0.8",
     "astro": "^5.15.9",
-    "astro-auto-import": "^0.4.2",
+    "astro-auto-import": "^0.5.1",
     "astro-seo": "^0.8.0",
-    "bluesky-comments": "^0.9.0",
     "hamburgers": "^1.2.1",
     "prettier-plugin-astro": "^0.13.0",
     "react": "^18.2.0",
@@ -33,6 +32,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "baseline-browser-mapping": "^2.9.19",
     "prettier": "^3.2.5"
   },
   "keywords": [
